--- a/3/examples.ipynb
+++ b/3/examples.ipynb
@@ -18,10 +18,12 @@
     "# Пример 1: p(x) = x^3 - 6 x^2 + 11 x - 6  (корни 1, 2, 3)\n",
     "1 -6 11 -6\n",
     "\n",
-    "# Пример 2: p(x) = x^3 - x  (корни -1, 0, 1)\n",
-    "1 0 -1 0\n",
+    "# Пример 2: p(x) = x^4 - 102 x^3 + 199x^2 + 102x - 200\n",
+    "# (корни 100, 2, 1, -1) Явно доминирующий корень\n",
+    "1 -102 199 102 -200\n",
     "\n",
     "# Пример 3: p(x) = (x - 1)^3  (кратный корень 1 кратности 3)\n",
+    "# py main.py --max-iter-ratio 1000000 --tol-ratio 1e-5 --multiple-roots\n",
     "1 -3 3 -1\n",
     "\n",
     "# Пример 4: p(x) = x^4 - 5 x^2 + 4  (корни -2, -1, 1, 2)\n",
@@ -30,14 +32,9 @@
     "# Пример 5: p(x) = x^2 + 1  (действительных корней нет)\n",
     "1 0 1\n",
     "\n",
-    "# Пример 6: многочлен степени 5 \n",
-    "1 -2 -5 6 3 0\n",
-    "\n",
-    "# Пример 7: \n",
-    "1 -3 2 1 -4 2 -1\n",
-    "\n",
-    "# Пример 8: \n",
-    "2 -1 -5 3 4 -2 -1 1"
+    "# Пример 6: p(x) = x^4 - 76.8x^3 + 112.8625x^2 + 287.56875x - 263.375\n",
+    "# (75.25, 2.5, -1.75, 0.8)\n",
+    "1 -76.8 112.8625 287.56875 -263.375\n"
    ]
   }
  ],
