--- a/4/examples.ipynb
+++ b/4/examples.ipynb
@@ -2,15 +2,18 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "ec3b8aeb",
       "metadata": {},
       "source": [
-        "## Пример 1 (2 переменные, синусы, диагонально доминирующий Якоби)\n",
+        "## Пример 1 (2 переменные, синусы)\n",
         "\n",
         "**Система:**\n",
+        "$$\n",
         "\\begin{aligned}\n",
         "f_1(x, y) &= 10(x-1) + \\sin(y-1) = 0\\\\\n",
         "f_2(x, y) &= \\sin(x-1) + 10(y-1) = 0\n",
         "\\end{aligned}\n",
+        "$$\n",
         "\n",
         "Ожидаемое решение: `(x, y) = (1, 1)`."
       ]
@@ -18,6 +21,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "6678a5c1",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -43,15 +47,18 @@
     },
     {
       "cell_type": "markdown",
+      "id": "aca9142c",
       "metadata": {},
       "source": [
         "## Пример 2 (2 переменные, экспоненты, диагонально доминирующий Якоби)\n",
         "\n",
         "**Система:**\n",
+        "$$\n",
         "\\begin{aligned}\n",
         "f_1(x, y) &= 8(x-0.5) + e^{(y-0.5)} - 1 = 0\\\\\n",
         "f_2(x, y) &= e^{(x-0.5)} + 8(y-0.5) - 1 = 0\n",
         "\\end{aligned}\n",
+        "$$\n",
         "\n",
         "Ожидаемое решение: `(x, y) = (0.5, 0.5)`."
       ]
@@ -59,6 +66,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "595cee2f",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -84,16 +92,19 @@
     },
     {
       "cell_type": "markdown",
+      "id": "0bad6f8f",
       "metadata": {},
       "source": [
         "## Пример 3 (3 переменные, произведения, симметричный Якоби)\n",
         "\n",
         "**Система:**\n",
+        "$$\n",
         "\\begin{aligned}\n",
         "f_1(x, y, z) &= 10(x-1) + yz - 1 = 0\\\\\n",
         "f_2(x, y, z) &= 10(y-1) + xz - 1 = 0\\\\\n",
         "f_3(x, y, z) &= 10(z-1) + xy - 1 = 0\n",
         "\\end{aligned}\n",
+        "$$\n",
         "\n",
         "Ожидаемое решение: `(x, y, z) = (1, 1, 1)`."
       ]
@@ -101,6 +112,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "275243c4",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -128,22 +140,26 @@
     },
     {
       "cell_type": "markdown",
+      "id": "36a08e24",
       "metadata": {},
       "source": [
-        "## Пример 4 (2 переменные, сдвиг по \\(\\pi/6\\) и 0.7)\n",
+        "## Пример 4 (2 переменные, сдвиг по $\\pi/6$ и 0.7)\n",
         "\n",
         "**Система:**\n",
+        "$$\n",
         "\\begin{aligned}\n",
         "f_1(x, y) &= 6\\left(x-\\frac{\\pi}{6}\\right) + \\sin(y-0.7) = 0\\\\\n",
         "f_2(x, y) &= \\sin\\left(x-\\frac{\\pi}{6}\\right) + 6(y-0.7) = 0\n",
         "\\end{aligned}\n",
+        "$$\n",
         "\n",
-        "Ожидаемое решение: `(x, y) = (π/6, 0.7)`."
+        "Ожидаемое решение: $(x, y) = (\\pi/6, 0.7)$."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "3104806f",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -169,17 +185,20 @@
     },
     {
       "cell_type": "markdown",
+      "id": "28a400e4",
       "metadata": {},
       "source": [
-        "## Пример 5 (4 переменные, циклическая связь через sin)\n",
+        "## Пример 5 (4 переменные, sin)\n",
         "\n",
         "**Система:**\n",
+        "$$\n",
         "\\begin{aligned}\n",
         "f_1(x_1,x_2,x_3,x_4) &= 12(x_1-1) + \\sin(x_2-1) = 0\\\\\n",
         "f_2(x_1,x_2,x_3,x_4) &= 12(x_2-1) + \\sin(x_3-1) = 0\\\\\n",
         "f_3(x_1,x_2,x_3,x_4) &= 12(x_3-1) + \\sin(x_4-1) = 0\\\\\n",
         "f_4(x_1,x_2,x_3,x_4) &= 12(x_4-1) + \\sin(x_1-1) = 0\n",
         "\\end{aligned}\n",
+        "$$\n",
         "\n",
         "Ожидаемое решение: `(x1, x2, x3, x4) = (1, 1, 1, 1)`."
       ]
