--- a/5/examples.ipynb
+++ b/5/examples.ipynb
@@ -1,47 +1,167 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "e6a55e10",
-   "metadata": {},
-   "source": []
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "c4c218e9",
+      "metadata": {},
+      "source": [
+        "## Пример 1 (полином)\n",
+        "\n",
+        "**f(x):** $x^2+1$\n",
+        "\n",
+        "**Уравнение:** $\\int_0^x (t^2+1)dt = 4/3$\n",
+        "\n",
+        "Ожидаемо: `x = 1`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c16d6b6b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- in.txt ---\n",
+        "'''\n",
+        "0 1.333333333333333 2 2000 1e-10 50\n",
+        "'''\n",
+        "\n",
+        "def f(x: float) -> float:\n",
+        "    return x**2 + 1.0"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "08169feb",
+      "metadata": {},
+      "source": [
+        "## Пример 2 (тригонометрия + сдвиг вверх, f(x) > 0)\n",
+        "\n",
+        "**f(x):** $\\sin(x)+2$\n",
+        "\n",
+        "**Уравнение:** $\\int_0^x (\\sin t + 2)dt = 3.929262798332297$\n",
+        "\n",
+        "Ожидаемо: `x = 1.5`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "31bd0d02",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- in.txt ---\n",
+        "'''\n",
+        "0 3.929262798332297 3 4000 1e-10 50\n",
+        "'''\n",
+        "\n",
+        "def f(x: float) -> float:\n",
+        "    return math.sin(x) + 2.0"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "12e2ce70",
+      "metadata": {},
+      "source": [
+        "## Пример 3 (экспонента)\n",
+        "\n",
+        "**f(x):** $e^x$\n",
+        "\n",
+        "**Уравнение:** $\\int_0^x e^t dt = e-1$\n",
+        "\n",
+        "Ожидаемо: `x = 1`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "bd64e9cb",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- in.txt ---\n",
+        "'''\n",
+        "0 1.718281828459045 2 5000 1e-10 50\n",
+        "'''\n",
+        "\n",
+        "def f(x: float) -> float:\n",
+        "    return math.exp(x)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "43d8e32e",
+      "metadata": {},
+      "source": [
+        "## Пример 4 (рациональная функция)\n",
+        "\n",
+        "**f(x):** $\\frac{1}{1+x^2}$\n",
+        "\n",
+        "**Уравнение:** $\\int_0^x \\frac{1}{1+t^2}dt = \\pi/4$\n",
+        "\n",
+        "Ожидаемо: `x = 1`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "aaff5f56",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- in.txt ---\n",
+        "'''\n",
+        "0 0.785398163397448 2 5000 1e-10 50\n",
+        "'''\n",
+        "\n",
+        "def f(x: float) -> float:\n",
+        "    return 1.0 / (1.0 + x**2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "dfd7c064",
+      "metadata": {},
+      "source": [
+        "## Пример 5 (корень, ограничение по области определения)\n",
+        "\n",
+        "**f(x):** $\\sqrt{x+2}$ (требуется $x \\ge -2$)\n",
+        "\n",
+        "**Уравнение:** $\\int_{-1}^x \\sqrt{t+2}dt = 2.797434948471088$\n",
+        "\n",
+        "Ожидаемо: `x = 1`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fb3a22f1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --- in.txt ---\n",
+        "'''\n",
+        "-1 2.797434948471088 2 5000 1e-10 50\n",
+        "'''\n",
+        "\n",
+        "def f(x: float) -> float:\n",
+        "    return math.sqrt(x + 2.0)"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": ""
+    }
   },
-  {
-   "cell_type": "markdown",
-   "id": "a1a70e87",
-   "metadata": {},
-   "source": [
-    "cos(x)\n",
-    "0 0.5 1.5 2000 1e-7 50\n",
-    "x = pi/6 ~= 0.5236"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "728988ce",
-   "metadata": {},
-   "source": [
-    "x\n",
-    "0 2 3 1000 1e-6 50\n",
-    "x = 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "051754ff",
-   "metadata": {},
-   "source": [
-    "x**2 + 1\n",
-    "0 1 1 1000 1e-6 50\n",
-    "x ~= 0.8177"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
