--- a/5/consp.ipynb
+++ b/5/consp.ipynb
@@ -6,6 +6,30 @@
       "metadata": {},
       "source": [
         "\n",
+        "## Входные данные\n",
+        "Вход читается из файла `in.txt` (в одну строку или через пробелы/переводы строк):\n",
+        "\n",
+        "`a b c n [eps] [max_iter]`\n",
+        "\n",
+        "- `a` — нижний предел интеграла.\n",
+        "- `b` — правая часть уравнения $\\int_a^x f(t)\\,dt = b$.\n",
+        "- `c` — правая граница отрезка поиска (используется отрезок $[a,c]$).\n",
+        "- `n` — начальное число разбиений в методе трапеций (для численного интеграла).\n",
+        "- `eps` (необязательно) — требуемая точность по невязке $|\\varphi(x)|$ (по умолчанию `1e-6`).\n",
+        "- `max_iter` (необязательно) — максимум итераций Ньютона (по умолчанию `50`).\n",
+        "\n",
+        "Примечание: включение/выключение дихотомии задаётся флагом `use_bisection` в `main()`, а не через входные данные.\n",
+        "\n",
+        "## Порядок метода трапеций\n",
+        "Метод трапеций имеет **порядок 2**: при шаге сетки $h$ погрешность убывает как $O(h^2)$.\n",
+        "При делении шага пополам (переход от $n$ к $2n$) ошибка должна уменьшаться примерно в 4 раза.\n",
+        "\n",
+        "В коде используется оценка Рунге–Ричардсона для трапеций:\n",
+        "$$\n",
+        "\\frac{|T_{2n} - T_n|}{2^2 - 1} \\approx \\text{ошибка},\n",
+        "$$\n",
+        "поэтому критерий остановки записан через множитель $(2^2 - 1)=3$.\n",
+        "\n",
         "## Постановка\n",
         "Требуется найти $x$, удовлетворяющее уравнению\n",
         "$$\n",
@@ -21,8 +45,21 @@
         "\n",
         "## Численное вычисление интеграла\n",
         "Интеграл $\\int_a^x f(t)dt$ вычисляется методом трапеций с `n` разбиениями (`integrate_trap`).\n",
+        "\n",
         "- Если `x > a`, строится равномерная сетка на $[a, x]$.\n",
         "- Если `x < a`, используется тождество $\\int_a^x = -\\int_x^a$, чтобы корректно учесть знак.\n",
+        "- Для ускорения при уточнении шага (делении пополам) интеграл не пересчитывается «с нуля», а переиспользуется предыдущая сумма (добавляются только новые точки).\n",
+        "\n",
+        "## Метод дихотомии\n",
+        "Чтобы получить надёжное стартовое приближение, можно сначала решить $\\varphi(x)=0$ методом дихотомии на отрезке $[a,c]$.\n",
+        "\n",
+        "Условие применимости: на концах отрезка должна быть смена знака\n",
+        "$$\n",
+        "\\varphi(a)\\,\\varphi(c) \\le 0.\n",
+        "$$\n",
+        "Тогда на каждой итерации берётся середина $m=(l+r)/2$ и по знаку $\\varphi(m)$ выбирается подотрезок, на котором остаётся корень.\n",
+        "\n",
+        "Важно: в программе на этапе дихотомии интеграл считается грубее, чем в методе Ньютона (иначе будет слишком медленно, потому что дихотомия делает много вычислений $\\varphi(x)$).\n",
         "\n",
         "## Метод Ньютона\n",
         "Для $\\varphi(x)$ выполняется итерационный процесс\n",
@@ -40,26 +77,34 @@
         "x_{k+1} = x_k - \\frac{\\int_a^{x_k} f(t)dt - b}{f(x_k)}.\n",
         "$$\n",
         "\n",
+        "## Гибридный подход (дихотомия → Ньютон)\n",
+        "В текущей версии решения используется схема:\n",
+        "1) дихотомией получаем $x_0 \\in [a,c]$;\n",
+        "2) затем уточняем корень методом Ньютона.\n",
+        "\n",
+        "Такой подход обычно надёжнее «чистого» Ньютона (Ньютон может уйти далеко при неудачном старте).\n",
+        "\n",
+        "## Флаг в `main()`\n",
+        "В `main()` есть переключатель `use_bisection`:\n",
+        "- `True` — сначала дихотомия, потом Ньютон;\n",
+        "- `False` — только Ньютон со стартом `x0 = (a + c)/2`.\n",
+        "\n",
         "## Как работает программа\n",
         "- Вход: `a b c n [eps] [max_iter]`.\n",
-        "- Начальное приближение берётся как середина: `x0 = (a + c)/2`.\n",
-        "- На каждой итерации вычисляется `F = integrate_trap(a, x, n)` и `phi = F - b`.\n",
+        "- Если включена дихотомия, старт для Ньютона берётся из `bisection_solve(a, b, a, c, ...)`.\n",
+        "- На каждой итерации Ньютона вычисляется `F = integrate_trap(a, x, ...)` и `phi = F - b`.\n",
         "- Остановка: `|phi| < eps` или исчерпано `max_iter`.\n",
-        "- Если `f(x) == 0`, дальнейший шаг Ньютона невозможен (в коде это отдельный выход).\n",
+        "- Если `f(x) == 0`, шаг Ньютона невозможен (деление на ноль).\n",
         "\n",
         "## Требования и ограничения\n",
-        "1. **Область определения:** `f(x)` должна быть определена во всех точках, которые попадут на сетку трапеций между `a` и текущим `x_k`, и в точке `x_k`.\n",
-        "2. **Запрет на нулевую производную:** если `f(x_k)=0`, метод Ньютона останавливается (деление на ноль). Это может быть как свойство самой задачи, так и следствие неудачного стартового приближения.\n",
-        "3. **Согласование точностей:** значение $\\varphi(x)$ считается приближённо (трапеции), поэтому слишком маленький `eps` не гарантирует улучшения результата без увеличения `n`.\n",
-        "4. **Глобальная сходимость не гарантируется:** реализация не ограничивает шаг и не удерживает $x$ внутри $[a, c]$. При неудачном `x0` возможен уход в сторону.\n",
-        "\n",
-        "## Скорость сходимости\n",
-        "- При хорошем `x0` и при условии `f(x*) \\neq 0` в корне метод Ньютона обычно сходится за небольшое число итераций.\n",
-        "- На практике скорость и точность ограничиваются ошибкой численного интегрирования: при малом `n` можно быстро получить малую невязку для приближённого интеграла, но само значение `x` будет ограничено точностью трапеций.\n",
+        "1. **Область определения:** `f(x)` должна быть определена на отрезках интегрирования между `a` и текущим `x`.\n",
+        "2. **Для дихотомии нужна смена знака:** если $\\varphi(a)\\varphi(c) > 0$, метод дихотомии не применим на $[a,c]$.\n",
+        "3. **Запрет на нулевую производную:** если `f(x_k)=0`, метод Ньютона останавливается.\n",
+        "4. **Согласование точностей:** $\\varphi(x)$ считается приближённо (трапеции), поэтому слишком маленький `eps` не даст смысла без достаточной точности интеграла.\n",
         "\n",
         "## Практические рекомендации\n",
-        "- Если требуется более точный ответ, увеличивают `n` (точность интеграла) и только затем ужесточают `eps`.\n",
-        "- При проблемах со сходимостью сначала меняют `c` (через него меняется `x0`), чтобы старт был ближе к ожидаемому корню и не попадал в точки, где `f(x)=0` или не определена."
+        "- Подбирайте `c` так, чтобы на $[a,c]$ была смена знака $\\varphi$.\n",
+        "- Для повышения точности увеличивают `n` (точность интеграла) и только затем ужесточают `eps`.\n"
       ]
     }
   ],
