--- a/4/consp.ipynb
+++ b/4/consp.ipynb
@@ -5,51 +5,69 @@
       "metadata": {},
       "source": [
         "\n",
+        "## Входные данные\n",
+        "Вход читается из файла `in.txt` построчно:\n",
+        "\n",
+        "1) `n`\n",
+        "\n",
+        "2) `eps_outer eps_inner`\n",
+        "\n",
+        "3) `max_outer max_inner`\n",
+        "\n",
+        "4) `x0_1 x0_2 ... x0_n`\n",
+        "\n",
+        "Примечание: в этой задаче функции `F(x)` и `J(x)` в коде заданы для **`n = 2`**.\n",
+        "\n",
         "## Постановка\n",
         "Решается система нелинейных уравнений\n",
         "$$\n",
         "F(x)=0, \\quad F: \\mathbb{R}^n \\to \\mathbb{R}^n,\n",
         "$$\n",
-        "где $x$ — вектор неизвестных. В программе задаются функции `F(x)` и матрица Якоби `J(x)`.\n",
+        "где $x$ — вектор неизвестных. В программе заданы функции `F(x)` и матрица Якоби `J(x)`.\n",
         "\n",
         "## Идея метода Ньютона для системы\n",
         "В точке $x^k$ функция линеаризуется:\n",
         "$$\n",
         "F(x^k + \\Delta) \\approx F(x^k) + J(x^k)\\,\\Delta.\n",
         "$$\n",
-        "Чтобы приблизить условие $F(x^{k+1})=0$, выбирают шаг $\\Delta^k$ из линейной системы\n",
+        "Шаг $\\Delta^k$ находится из линейной системы\n",
         "$$\n",
         "J(x^k)\\,\\Delta^k = -F(x^k),\n",
         "$$\n",
-        "после чего выполняют обновление\n",
+        "после чего выполняется обновление\n",
         "$$\n",
         "x^{k+1} = x^k + \\Delta^k.\n",
         "$$\n",
         "\n",
+        "## Внутренний метод (Гаусс–Зейдель)\n",
+        "Линейная система на каждой внешней итерации Ньютона решается **итерационно** методом Гаусса–Зейделя.\n",
+        "\n",
+        "Критерий остановки внутренних итераций в коде:\n",
+        "- либо $\\|y^{(s)} - y^{(s-1)}\\| < eps\\_inner$,\n",
+        "- либо норма невязки $\\|A y - b\\| < eps\\_inner$.\n",
+        "\n",
+        "Также требуется, чтобы диагональные элементы `A[i][i]` были ненулевые (иначе деление на ноль).\n",
+        "\n",
         "## Как работает программа\n",
         "- Внешний цикл — итерации Ньютона до `max_outer`.\n",
-        "- На каждой внешней итерации собираются `Fx = F(x)` и `Jx = J(x)`.\n",
+        "- На каждой внешней итерации вычисляются `Fx = F(x)` и `Jx = J(x)`.\n",
         "- Решается линейная система `Jx * delta = -Fx`, где `delta` — шаг Ньютона.\n",
-        "- Внутреннее решение линейной системы выполняется методом Гаусса–Зейделя с точностью `eps_inner` (и ограничением `max_inner`).\n",
+        "- Внутреннее решение `delta` находится методом Зейделя с точностью `eps_inner` (и ограничением `max_inner`).\n",
         "- Критерий остановки внешнего цикла: `||F(x)|| < eps_outer`.\n",
         "\n",
-        "шаг $\\Delta$ находится итерационно\n",
-        "\n",
         "## Требования и ограничения\n",
-        "1. **Гладкость:** компоненты $F$ должны быть дифференцируемыми в области, где работает метод, чтобы Якоби был корректно задан.\n",
-        "2. **Невырожденность Якоби:** в окрестности решения матрица $J(x)$ должна быть невырождена; иначе шаг Ньютона не определён или становится крайне нестабильным.\n",
-        "3. **Начальное приближение:** метод Ньютона в основном обладает локальной сходимостью — при плохом `x0` возможны уход в сторону или расходимость.\n",
-        "4. **Внутренний метод Зейделя:** для сходимости Зейделя желательно, чтобы `J(x^k)` была хорошо обусловлена и «удобна» для итераций (часто помогает диагональное преобладание). Диагональные элементы `J[i][i]` не должны быть нулевыми.\n",
+        "1. **Гладкость:** компоненты $F$ должны быть дифференцируемыми в области работы метода.\n",
+        "2. **Невырожденность Якоби:** в окрестности решения матрица $J(x)$ должна быть невырождена.\n",
+        "3. **Начальное приближение:** метод Ньютона локально сходится; при плохом `x0` возможна расходимость.\n",
+        "4. **Сходимость Зейделя:** для быстрых внутренних итераций полезны хорошая обусловленность и/или диагональное преобладание у `J(x^k)`.\n",
         "\n",
         "## Скорость сходимости\n",
-        "- Классический Ньютон при точном решении линейной системы даёт **квадратичную** локальную сходимость: вблизи корня ошибка убывает очень быстро.\n",
-        "- Здесь линейная система решается приближённо, поэтому скорость зависит от `eps_inner`:\n",
-        "  - при достаточно строгом `eps_inner` поведение близко к квадратичному;\n",
-        "  - при грубом `eps_inner` сходимость может стать линейной и потребовать больше внешних итераций.\n",
+        "- При точном решении линейной системы классический Ньютон даёт квадратичную локальную сходимость.\n",
+        "- При приближённом решении (как здесь) поведение зависит от `eps_inner`: слишком грубый `eps_inner` может замедлить внешний процесс.\n",
         "\n",
         "## Практические замечания по параметрам\n",
-        "- Обычно имеет смысл брать `eps_inner` на 1–3 порядка меньше `eps_outer`, чтобы внутренние ошибки не ограничивали внешний Ньютон.\n",
-        "- Если внутренние итерации растут или стоят на месте, это признак проблем с матрицей Якоби (плохая обусловленность, отсутствие условий сходимости Зейделя) или с выбором `x0`."
+        "- Часто берут `eps_inner` на 1–3 порядка меньше `eps_outer`, чтобы внутренние ошибки не ограничивали внешний Ньютон.\n",
+        "- Если внутренние итерации не сходятся, стоит проверить `x0` и свойства `J(x)` (например, диагональные элементы и обусловленность).\n"
       ]
     }
   ],
